--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <a-scene>
-      <a-sky src="assets/images/whole-chittor" rotation="0 -130 0"></a-sky>
+      <a-sky src="assets/images/rb.jpg" rotatmion="0 -130 0"></a-sky>
 
-      <a-text font="kelsonsans" value="Puy de Sancy, France" width="6" position="-2.5 0.25 -1.5"
+      <a-text font="kelsonsans" value="Rashtrapati Bhavan -By TourXP" width="6" position="-2.5 0.25 -1.5"
               rotation="0 15 0"></a-text>
     </a-scene>
   </body>
